[package]
name = "slicevec"
version = "0.1.1"
description = "A vector using an external slice as backing storage"
keywords = ["vec", "slice", "array", "no_std"]
categories = ["data-structures"]
repository = "https://github.com/jonas-schievink/slicevec.git"
documentation = "https://docs.rs/slicevec"
license = "CC0-1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]

[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
